# teckit

./: .gitignore  .travis.yml  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README.md  README.txt  TECkit.mcp  aclocal.m4  autogen.sh  build-linux-binaries.sh  build-linux-package.sh  build-mac-binaries.sh  build-windows-binaries.sh  build-windows-common  build-windows-package.sh  config.h.in  configure  configure.ac
SFconv/: ConvertUTF.c  ConvertUTF.h  SFconv.cpp  SFconv_ver.rc  UtfCodec.cpp  UtfCodec.h  sfReader.h  ushort_chartraits.h
debian-src/: changelog  control  copyright  libteckit-dev.dirs  libteckit-dev.install  libteckit-perl.dirs  libteckit-perl.install  libteckit.install  rules  teckit.dirs  teckit.install  teckit.postrm  teckit.preinst
docs/: Makefile.am  Makefile.in  TECkit_Language.odt  TECkit_Tools.odt  sfconv.1  teckit_compile.1  txtconv.1
lib/: Makefile.am  Makefile.in
license/: LICENSING.txt
mac-installer/: .gitignore  Description.plist  (+2 more)
source/: Compiler.cpp  Compiler.h  Engine.cpp  Engine.h  Engine_ver.rc  MakeUnicodeNames.pl  Makefile.am  NormalizationData.c  TECkit_Format.h  UnicodeNames.cpp  UpdateUnidata.sh  test.cp  ulong_chartraits.h  version_defs.h
source/Perl/: Makefile.PL  TECkit.xs
source/Perl/lib/Encode/: TECkit.pm
source/Public-headers/: TECkit_Common.h  TECkit_Compiler.h  TECkit_Engine.h
source/Sample-tools/: TECkit_Compile.c  TECkit_Compile.cpp  TxtConv.c  TxtConv.cpp  version_defs.h
source/teckitjni/: configure.in
source/teckitjni/src/: DocCharConvert_Converter_TecKitJni.h  TecKitJni.cpp  TecKitJni.h
(+14 files in other folders)
